# MuonSimulator

./: .gitignore  CMakeLists.txt  Makefile
configs/: geometry.yml  grid.yml  grid3d.yml  pairs.yml
macros/: run.mac
scripts/: analyze_angle_distribution.py  build_W3D.py  build_W3D_poca.py  build_system_matrix.py  check_dims.py  export_mesh_from_volume.py  generate_pairs.py  inspect_x_values.py  make_scene_with_detectors.py  plot_poca.py  plot_poca_3d_simple.py  plot_poca_simple.py  plot_simple_recon3d.py  rays_from_pairs.py  recon_cgls_3d.py  recon_cgls_3d_progressive.py  recon_mlem2d.py  render_recon3d_view.py  separate_muons.py
scripts/common/: paths.py  viz.py
scripts/evaluation/: debug_alignment.py  evaluate_results.py
scripts/forPaper/: synthesis_pngs.py
scripts/fusion/: build_flux_map.py  build_passage_matrix.py  calc_prob_map.py  fuse_images.py  solve_passage.py
scripts/paper_figures/: synthesis_pngs.py
scripts/preprocessing/: generate_pairs.py  separate_muons.py
scripts/reconstruction/: build_system_matrix.py  recon_cgls_3d_progressive.py  recon_method_d.py  recon_proposed.py
scripts/visualization/: debug_ray_density.py  visualize_setup_3d.py
scripts/zzz_others/: build_W2D_segment.py  build_W3D_poca.py  mix_muon_data.py  recon_mlem3d.py  recon_mlem3d_tv.py  render_recon3d_png.py  render_recon_x_3d.py
src/: DetectorConstruction.cc  DetectorConstruction.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  main.cc
